Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "javassist3.9.GA.zip": 6dfcfdb7852dbe2dda64f451c8a9882143d99dbc
+  javassist-3.16.1-GA.zip: 6bf7e7947fbf9fc79a4cbdf2ba9f8d47dc937c50
